ADD: Main - Buttons

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
         </div>
     </header>
 
+    <main class="wrapper">
+
+        <form class="container">
+            <input type="submit" value="Add Task" class="buttons"> 
+            <input type="submit" value="Add Section" class="buttons"> 
+        </form>
+
+    </main>
+
     
 </body>
 </html>
