--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <main class="wrapper">
 
-        <form class="form container">
+        <form class="container">
             <input type="submit" value="Add Task" class="colored buttons"> 
             <input type="submit" value="Add Section" class="uncolored buttons"> 
         </form>
