ADD: Divider + Small Adjustments

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
 
     <main class="wrapper">
 
-        <form class="container">
+        <form class="form container">
             <input type="submit" value="Add Task" class="colored buttons"> 
             <input type="submit" value="Add Section" class="uncolored buttons"> 
         </form>
+
+        <div class="divider"></div>
 
         <!-- <section class="section container">
             <div>
