--- a/index.html
+++ b/index.html
@@ -25,72 +25,48 @@
             <input type="submit" value="Add Section" class="uncolored buttons"> 
         </form>
 
-        <div class="divider"></div>
-
-        <!-- <section class="section container">
-            <div>
-                <img src="./img/down-arrow.png" alt="">
-                <h3 class="display-inline"> New Task</h3>    
-            </div>
-            <div>
-                <img src="./img/check-mark.png" alt="">
-                <p class="display-inline">Quarterly Newsletter</p>
-                <span class="highlight bg_blue">Editorial</span>  
-            </div>
-        </section> -->
-
-        <section class="section container">
+        <section class="container">
             <ul>
-                <li>
+                <li class="main-item-list">
                     <img src="./img/down-arrow.png" alt="">
-                    <strong class="section-title  vertical-align">New Task</strong> 
-                    <li>
-                        <img src="./img/check-mark.png" alt="">
-                        <p class="display-inline vertical-align">Quarterly Newsletter</p>
-                        <span class="highlight bg_blue">Editorial</span>  
-                    </li>
-
+                    <h3 class="display-inline vertical-align">New Task</h3> 
+                    <ul>
+                         <li>
+                            <img src="./img/check-mark.png" alt="">
+                            <p class="display-inline vertical-align">Quarterly Newsletter</p>
+                            <span class="tag bg_blue">Editorial</span>  
+                        </li>
+                    </ul>
                 </li>
-            </ul>
-
-        </section>
-
-        <section class="section container">
-            <ul>
-                <li>
+                <li class="main-item-list">
                     <img src="./img/down-arrow.png" alt="">
-                    <strong class="section-title vertical-align">Today</strong> 
+                    <h3 class="display-inline vertical-align">Today</h3> 
                     <ul>
                         <li>
                             <img src="./img/check-mark.png" alt="">
                             <p class="display-inline vertical-align">Quarterly Newsletter</p>
-                            <span class="highlight bg_blue">Editorial</span>  
+                            <span class="tag bg_blue">Editorial</span>  
                         </li>
                         <li>
                             <img src="./img/check-mark.png" alt="">
                             <p class="display-inline vertical-align">Mobile App Launch</p>
-                            <span class="highlight bg_violet">Q1 Goals</span>  
+                            <span class="tag bg_violet">Q1 Goals</span>  
                         </li>
                         <li>
                             <img src="./img/cancel.png" alt="">
                             <p class="display-inline vertical-align">Interview John H.</p>
-                            <span class="highlight bg_green">Recruiting</span>  
+                            <span class="tag bg_green">Recruiting</span>  
                         </li>
                         <li>
                             <img src="./img/check-mark.png" alt="">
                             <p class="display-inline vertical-align">Summit update to mobile storefronts</p>
-                            <span class="highlight bg_orange">Mobile</span>  
+                            <span class="tag bg_orange">Mobile</span>  
                         </li>
                     </ul>
                 </li>
-            </ul>            
-        </section>
-
-        <section class="section container">
-            <ul>
-                <li>
+                <li class="main-item-list">
                     <img src="./img/down-arrow.png" alt="">
-                    <strong class="section-title vertical-align">Upcoming</strong> 
+                    <h3 class="display-inline vertical-align">Upcoming</h3> 
                     <ul>
                         <li>
                             <img src="./img/cancel.png" alt="">
@@ -99,17 +75,17 @@
                         <li>
                             <img src="./img/check-mark.png" alt="">
                             <p class="display-inline vertical-align">Homepage refresh</p>
-                            <span class="highlight bg_pink">Website</span>  
+                            <span class="tag bg_pink">Website</span>  
                         </li>
                         <li>
                             <img src="./img/check-mark.png" alt="">
                             <p class="display-inline vertical-align">Onboard new Sales team members</p>
-                            <span class="highlight bg_green">Sales</span>  
+                            <span class="tag bg_green">Sales</span>  
                         </li>
                         <li>
                             <img src="./img/check-mark.png" alt="">
                             <p class="display-inline vertical-align">Review editorial calendar</p>
-                            <span class="highlight bg_blue">Editorial</span>  
+                            <span class="tag bg_blue">Editorial</span>  
                         </li>
                     </ul>
                 </li>
